# MiniAccess

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  resources.qrc
app/: main.cpp
core/: AvailList.cpp  AvailList.h  DisplayFmt.h  Page.cpp  Page.h  Record.cpp  Record.h  Schema.cpp  Schema.h  Storage.cpp  Storage.h  Table.cpp  bplustreeint32.cpp  bplustreeint32.h  bplustreestring.cpp  bplustreestring.h  forms_io.cpp  forms_io.h  indexint32.cpp  indexint32.h  indexstorage.cpp  indexstorage.h  indexstring.cpp  indexstring.h  metadata.cpp  metadata.h  pk_utils.cpp  pk_utils.h  relations_io.cpp  relations_io.h  table.h
gui/: MainWindow.cpp  MainWindow.h  boolcheckdelegate.cpp  boolcheckdelegate.h  booldelegate.cpp  booldelegate.h  datasheetpage.cpp  datasheetpage.h  designpage.cpp  designpage.h  formatdelegate.cpp  formatdelegate.h  formdesignerpage.cpp  formdesignerpage.h  formrunnerpage.cpp  formrunnerpage.h  newtabledialog.cpp  newtabledialog.h  objectsdock.cpp  objectsdock.h  querybuilderdialog.cpp  querybuilderdialog.h  querybuilderpage.cpp  querybuilderpage.h  querymodel.cpp  querymodel.h  relationdesignerdialog.cpp  relationdesignerdialog.h  relationdesignerpage.cpp  relationdesignerpage.h  relationeditdialog.cpp  relationeditdialog.h  reportquickdialog.cpp  reportquickdialog.h  tabledesignerdialog.cpp  tabledesignerdialog.h  tablemodel.cpp  tablemodel.h  theme.cpp  theme.h
gui/delegates/: CurrencyDelegate.cpp  CurrencyDelegate.h  datetimedelegate.cpp  datetimedelegate.h
